--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -5272,6 +5272,17 @@
   url       = {https://diglib.eg.org/bitstream/handle/10.2312/COMPAESTH.COMPAESTH07.057-064/057-064.pdf},
 }
 
+@InCollection{Bennison1998,
+  author    = {Bennison, N.},
+  title     = {Accessing character through conversation: Tom Stoppard's Professional Foul 1},
+  booktitle = {Exploring the Language of Drama},
+  publisher = {Routledge},
+  year      = {1998},
+  doi       = {10.4324/9780203003152-6},
+  owner     = {Vincent},
+  timestamp = {2024.06.29},
+}
+
 @Book{Benson1970,
   title     = {The Interpretation of Narrative: Theory and Practice},
   publisher = {Harvard University Press},
@@ -10973,6 +10984,19 @@
   owner     = {Vincent},
   timestamp = {2023.11.25},
   url       = {https://www.jstor.org/stable/23329828},
+}
+
+@Article{Chawla2002,
+  author    = {Chawla, N. V. and Bowyer, K. W. and Hall, L. O. and Kegelmeyer, W. P.},
+  title     = {SMOTE: Synthetic Minority Over-sampling Technique},
+  journal   = {Journal of Artificial Intelligence Research},
+  year      = {2002},
+  volume    = {16},
+  number    = {1},
+  pages     = {321-357},
+  owner     = {Vincent},
+  timestamp = {2024.06.29},
+  url       = {https://dl.acm.org/doi/10.5555/1622407.1622416},
 }
 
 @InProceedings{Chen2004,
@@ -26821,6 +26845,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2023.08.11},
 }
 
+@InProceedings{Ho1995,
+  author    = {Ho, T. K.},
+  title     = {Random decision forests},
+  booktitle = {3rd International Conference on Document Analysis and Recognition},
+  year      = {1995},
+  pages     = {278-282},
+  doi       = {10.1109/icdar.1995.598994},
+  owner     = {Vincent},
+  timestamp = {2024.06.29},
+}
+
 @InProceedings{Ho2004,
   author    = {Ho, Y.-H. and Chen, W.-R. and Lin, C.-W.},
   title     = {A rate-constrained key-frame extraction scheme for channel-aware video streaming},
@@ -32319,6 +32354,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://www.bibsonomy.org/bibtex/2a5a7debef9c7b1747209b47ae80687e8/josephausterwei},
 }
 
+@Article{Kiss2010,
+  author    = {Kiss, O.},
+  title     = {Reinventing the Plot: J.C. Gottsched's Sterbender Cato},
+  journal   = {Deutsche Vierteljahrsschrift für Literaturwissenschaft und Geistesgeschichte},
+  year      = {2010},
+  volume    = {84},
+  number    = {4},
+  pages     = {507–525},
+  doi       = {10.1007/bf03375820},
+  owner     = {Vincent},
+  timestamp = {2024.06.29},
+}
+
 @InProceedings{Kitaev2020,
   author    = {Kitaev, N. and Kaiser, L. and Levskaya, A.},
   title     = {Reformer: The Efficient Transformer},
@@ -33426,6 +33474,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2024.06.27},
   url       = {https://www.digitalhumanitiescooperation.de/wp-content/uploads/2019/07/p07_krautter_et_al_eng.pdf},
+}
+
+@InCollection{Krautter2022,
+  author    = {Krautter, B. and Pagel, J. and Reiter, N. and Willand, M.},
+  title     = {Properties of Dramatic Characters: Automatically Detecting Gender, Age, and Social Status},
+  booktitle = {Computational Stylistics in Poetry, Prose, and Drama},
+  publisher = {De Gruyter},
+  year      = {2022},
+  pages     = {179–202},
+  doi       = {10.1515/9783110781502-010},
+  owner     = {Vincent},
+  timestamp = {2024.06.29},
 }
 
 @InCollection{Krautter2024,
@@ -46905,6 +46965,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://aclanthology.org/2020.lrec-1.7/},
 }
 
+@InProceedings{Pagel2021,
+  author    = {Pagel, J. and Reiter, N.},
+  title     = {{DramaCoref}: A Hybrid Coreference Resolution System for German Theater Plays},
+  booktitle = {4th Workshop on Computational Models of Reference, Anaphora and Coreference},
+  year      = {2021},
+  pages     = {36-46},
+  doi       = {10.18653/v1/2021.crac-1.4},
+  owner     = {Vincent},
+  timestamp = {2024.06.29},
+}
+
 @Book{Paige2011,
   title     = {Before Fiction: The Ancien Régime of the Novel},
   publisher = {University of Pennsylvania Press},
@@ -48551,6 +48622,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2022.07.02},
   url       = {http://ceur-ws.org/Vol-2723/short8.pdf},
+}
+
+@Article{Pichler2022,
+  author    = {Pichler, A. and Reiter, N.},
+  title     = {From Concepts to Texts and Back: Operationalization as a Core Activity of Digital Humanities},
+  journal   = {Journal of Cultural Analytics},
+  year      = {2022},
+  volume    = {7},
+  number    = {4},
+  doi       = {10.22148/001c.57195},
+  owner     = {Vincent},
+  timestamp = {2024.06.29},
 }
 
 @Book{Pickering2005,
@@ -51005,6 +51088,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://aclanthology.org/2022.lrec-1.357/},
 }
 
+@InBook{Reiter2022a,
+  pages     = {473-508},
+  title     = {What are they Talking About? A Systematic Exploration of Theme Identification Methods for Character Speech in Dramatic Texts},
+  publisher = {J.B. Metzler},
+  year      = {2022},
+  author    = {Reiter, N. and Willand, M.},
+  booktitle = {Digitale Literaturwissenschaft},
+  doi       = {10.1007/978-3-476-05886-7_20},
+  owner     = {Vincent},
+  timestamp = {2024.06.29},
+}
+
 @PhdThesis{Reling1994,
   author    = {Reling, H. O.},
   title     = {The composition of tripolar pronouncement stories in the Gospel of Mark},
@@ -51025,6 +51120,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1080/09546553.2019.1671373},
   owner     = {Vincent},
   timestamp = {2020.07.20},
+}
+
+@InProceedings{Remus2010,
+  author    = {Remus, R. and Quasthoff, U. and Heyer, G.},
+  title     = {SentiWS - A Publicly Available German-language Resource for Sentiment Analysis},
+  booktitle = {7th International Conference on Language Resources and Evaluation},
+  year      = {2010},
+  pages     = {1168-1171},
+  owner     = {Vincent},
+  timestamp = {2024.06.29},
+  url       = {https://aclanthology.org/L10-1339/},
 }
 
 @InProceedings{Ren2015,
