added Kim2024b and Silva2024c

--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -11964,6 +11964,19 @@
   url       = {https://openreview.net/forum?id=8smkJ2ekBRC},
 }
 
+@Article{Chu2022,
+  author    = {Chu, Kah Em and Keikhosrokiani, Pantea and Pourya Asl, Moussa},
+  title     = {A Topic Modeling and Sentiment Analysis Model for Detection and Visualization of Themes in Literary Texts},
+  journal   = {Pertanika Journal of Science and Technology},
+  year      = {2022},
+  volume    = {30},
+  number    = {4},
+  pages     = {2535-2561},
+  doi       = {10.47836/pjst.30.4.14},
+  owner     = {Vincent},
+  timestamp = {2024.07.13},
+}
+
 @MastersThesis{Chu2022a,
   author    = {Chu , C. X.},
   title     = {Knowledge Extraction from Fictional Texts},
@@ -19041,6 +19054,18 @@
   timestamp = {2023.11.30},
 }
 
+@Article{Fedchenko2024,
+  author    = {Fedchenko, V. and Nicolosi, D. M. and Roe, G.},
+  title     = {À la recherche des réseaux intertextuels : défis de la recherche littéraire à grande échelle},
+  journal   = {Varia},
+  year      = {2024},
+  volume    = {9},
+  pages     = {4},
+  doi       = {10.4000/11wmw},
+  owner     = {Vincent},
+  timestamp = {2024.07.02},
+}
+
 @InProceedings{Federico2011,
   author    = {Federico, P. and Aigner, W. and Miksch, S. and Windhager, F. and Zenk, L.},
   title     = {A visual analytics approach to dynamic social networks},
@@ -23012,6 +23037,19 @@
   owner     = {Vincent},
   timestamp = {2020.07.25},
   url       = {https://press.princeton.edu/books/hardcover/9780691639802/acting-and-action-in-shakespearean-tragedy},
+}
+
+@Article{Goldman2014,
+  author    = {Goldman, Susan R. and Lee, Carol D.},
+  title     = {Text Complexity: State of the Art and the Conundrums It Raises},
+  journal   = {The Elementary School Journal},
+  year      = {2014},
+  volume    = {115},
+  number    = {2},
+  pages     = {290-300},
+  doi       = {10.1086/678298},
+  owner     = {Vincent},
+  timestamp = {2024.07.13},
 }
 
 @Book{Goldsmith1988,
@@ -29081,6 +29119,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.04.12},
 }
 
+@Article{Jaenicke2016,
+  author    = {Jänicke, S. and Franzini, G. and Cheema, M. F. and Scheuermann, G.},
+  title     = {Visual Text Analysis in Digital Humanities},
+  journal   = {Computer Graphics Forum},
+  year      = {2016},
+  volume    = {36},
+  number    = {6},
+  pages     = {226-250},
+  doi       = {10.1111/cgf.12873},
+  owner     = {Vincent},
+  timestamp = {2024.07.13},
+}
+
 @InProceedings{Jaenicke2017,
   author    = {Jänicke, S. and Focht, J.},
   title     = {Untangling the social network of musicians},
@@ -31357,6 +31408,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.03.23},
 }
 
+@Article{Kejriwal2023,
+  author    = {Kejriwal, Mayank and Nagaraj, Akarsh},
+  title     = {Quantifying Gender Disparity in Pre-Modern English Literature using Natural Language Processing},
+  journal   = {Journal of Data Science},
+  year      = {2023},
+  pages     = {77-96},
+  doi       = {10.6339/23-jds1100},
+  owner     = {Vincent},
+  timestamp = {2024.07.13},
+}
+
 @Article{Kelbert2021,
   author    = {Kelbert, E.},
   title     = {Appearances - Character description as a network of signification in Russian translations of Jane Eyre},
@@ -32189,6 +32251,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.18653/v1/2021.findings-emnlp.356},
   owner     = {Vincent},
   timestamp = {2022.06.28},
+}
+
+@Article{Kim2024b,
+  author    = {Kim, Y.},
+  title     = {Character as a Web of Words: Towards a Network Theory of Narrative},
+  journal   = {Criticism and Theory},
+  year      = {2024},
+  volume    = {29},
+  number    = {2},
+  doi       = {10.19116/theory.2024.29.2.125},
+  owner     = {Vincent},
+  timestamp = {2024.07.05},
 }
 
 @Book{Kimmerer2013,
@@ -38681,6 +38755,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2022.06.29},
 }
 
+@InProceedings{Lucy2021,
+  author    = {Lucy, Li and Bamman, David},
+  title     = {Gender and Representation Bias in {GPT}-3 Generated Stories},
+  booktitle = {3rd Workshop on Narrative Understanding},
+  year      = {2021},
+  pages     = {48-55},
+  doi       = {10.18653/v1/2021.nuse-1.5},
+  owner     = {Vincent},
+  timestamp = {2024.07.13},
+}
+
 @InProceedings{LuczakRoesch2015,
   author    = {Luczak-Roesch, M. and Tinati, R. and Van Kleek, M. and Shadbolt, N.},
   title     = {From Coincidence to Purposeful Flow? Properties of Transcendental Information Cascades},
@@ -39488,6 +39573,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1145/1151659.1159930},
   owner     = {Vincent},
   timestamp = {2023.03.23},
+}
+
+@InProceedings{Maharjan2018,
+  author    = {Maharjan, Suraj and Kar, Sudipta and Montes, Manuel and Gonzalez, Fabio A. and Solorio, Thamar},
+  title     = {Letting Emotions Flow: Success Prediction by Modeling the Flow of Emotions in Books},
+  booktitle = {Conference of the North American Chapter of the Association for Computational Linguistics: Human Language Technologies},
+  year      = {2018},
+  pages     = {259-265},
+  doi       = {10.18653/v1/n18-2042},
+  owner     = {Vincent},
+  timestamp = {2024.07.13},
 }
 
 @Article{Mahlberg2012,
@@ -50770,6 +50866,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url         = {http://scholarworks.uvm.edu/graddis/743/},
 }
 
+@InProceedings{Real2021,
+  author    = {Real, Livy and Johansson, Karina M. and Mendes, Júlio C. S. and Lopes, Bianca M. and Oshiro, Márcio T. I.},
+  title     = {Generating E-commerce Product Titles in {P}ortuguese},
+  booktitle = {Anais do XLVIII Seminário Integrado de Software e Hardware},
+  year      = {2021},
+  pages     = {299-304},
+  doi       = {10.5753/semish.2021.15835},
+  owner     = {Vincent},
+  timestamp = {2024.07.13},
+}
+
 @InProceedings{Recasens2009,
   author    = {Recasens, M. and Martí, T. and Taulé, M. and Màrquez, L. and Sapena, E.},
   title     = {Coreference Resolution in Multiple Languages},
@@ -52206,6 +52313,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1145/3570991.3571019},
   owner     = {Vincent},
   timestamp = {2023.01.11},
+}
+
+@InCollection{Rodda2024,
+  author    = {Rodda, I. and Durga Bhavani, S.},
+  title     = {Visualization of Textual Corpora Using Social Network Analysis},
+  booktitle = {Optimized Computational Intelligence Driven Decision‐Making: Theory, Application and Challenges},
+  publisher = {Scrivener},
+  year      = {2024},
+  chapter   = {8},
+  pages     = {151-171},
+  doi       = {10.1002/9781394242566.ch8},
+  owner     = {Vincent},
+  timestamp = {2024.07.11},
 }
 
 @InProceedings{Rodin2016,
@@ -53827,6 +53947,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1093/llc/fqaa015},
   owner     = {Vincent},
   timestamp = {2023.11.25},
+}
+
+@InProceedings{Santana2018,
+  author    = {Santana, B. S. and Woloszyn, V. and Wives, L. K.},
+  title     = {Is there gender bias and stereotype in {P}ortuguese word embeddings?},
+  booktitle = {13th International Conference Computational Processing of the Portuguese Language},
+  year      = {2018},
+  pages     = {24-26},
+  owner     = {Vincent},
+  timestamp = {2024.07.13},
+  url       = {https://www.inf.ufrgs.br/propor-2018/wp-content/uploads/2018/10/PROPOR2018-SRW_paper_6.pdf},
 }
 
 @Article{Santana2023,
@@ -56451,19 +56582,6 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2024.04.20},
 }
 
-@Article{Silva2022b,
-  author    = {Silva, M. O. and Scofield, C. and De Melo-Gomes, L. and Moro, M. M.},
-  title     = {Cross-collection Dataset of Public Domain Portuguese-language Works},
-  journal   = {Journal of Information and Data Management},
-  year      = {2022},
-  volume    = {13},
-  number    = {1},
-  pages     = {95-110},
-  doi       = {10.5753/jidm.2022.2349},
-  owner     = {Vincent},
-  timestamp = {2024.06.02},
-}
-
 @InProceedings{Silva2023,
   author    = {Silva, M. O. and Oliveira, G. P. and Moro, M. M.},
   title     = {Analyzing Character Networks in Portuguese-language Literary Works},
@@ -56519,6 +56637,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2024.06.01},
   url       = {https://aclanthology.org/2024.propor-1.39/},
+}
+
+@InProceedings{Silva2024c,
+  author    = {Silva, M. O. and Moro, M. M.},
+  title     = {NLP Pipeline for Gender Bias Detection in Portuguese Literature},
+  booktitle = {Seminário Integrado de Software e Hardware},
+  year      = {2024},
+  volume    = {51},
+  pages     = {169-180},
+  doi       = {10.5753/semish.2024.2914},
+  owner     = {Vincent},
+  timestamp = {2024.07.13},
 }
 
 @Article{SilvaDias2013,
@@ -58796,6 +58926,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1353/esp.2023.a906709},
   owner     = {Vincent},
   timestamp = {2023.09.16},
+}
+
+@Article{Stuhler2024,
+  author    = {Stuhler, O.},
+  title     = {The gender agency gap in fiction writing (1850 to 2010)},
+  journal   = {Proceedings of the National Academy of Sciences},
+  year      = {2024},
+  volume    = {121},
+  number    = {29},
+  pages     = {e2319514121},
+  doi       = {10.1073/pnas.2319514121},
+  owner     = {Vincent},
+  timestamp = {2024.07.11},
 }
 
 @InProceedings{Stymne2020,
@@ -61912,6 +62055,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2021.06.24},
   url       = {https://press.uchicago.edu/ucp/books/book/chicago/D/bo35853783.html},
+}
+
+@Article{Underwood2020a,
+  author    = {Underwood, T. and Kimutis, P. and Witte, J.},
+  title     = {{NovelTM} Datasets for English-Language Fiction, 1700-2009},
+  journal   = {Journal of Cultural Analytics},
+  year      = {2020},
+  volume    = {5},
+  number    = {2},
+  pages     = {8},
+  doi       = {10.22148/001c.13147},
+  owner     = {Vincent},
+  timestamp = {2024.07.13},
 }
 
 @InProceedings{Uno2014,
@@ -67292,6 +67448,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2024.06.24},
   url       = {https://proceedings.neurips.cc/paper/2020/hash/c8512d142a2d849725f31a9a7a361ab9-Abstract.html},
+}
+
+@InProceedings{Zahn2021,
+  author    = {Zahn, Nina N. and Dal Molin, Greice P. and Musse, Soraia R.},
+  title     = {Cross-Media Sentiment Analysis on German Blogs},
+  booktitle = {Anais do XLVIII Seminário Integrado de Software e Hardware},
+  year      = {2021},
+  pages     = {114-122},
+  doi       = {10.5753/semish.2021.15813},
+  owner     = {Vincent},
+  timestamp = {2024.07.13},
 }
 
 @Article{Zajonc1968,
