--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -31180,6 +31180,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2023.08.07},
 }
 
+@Book{Karsdorp2021,
+  title     = {Humanities Data Analysis: Case Studies with Python},
+  publisher = {Princeton University Press},
+  year      = {2021},
+  author    = {Karsdorp, F. and Kestemont, M. and Riddell, A.},
+  owner     = {Vincent},
+  timestamp = {2024.07.15},
+  url       = {https://press.princeton.edu/books/hardcover/9780691172361/humanities-data-analysis},
+}
+
 @Article{Kartyas2016,
   author    = {Kartyas, P.},
   title     = {Examination of the Correlation Between Self-Efficacy and Agency Based on the Content Analysis of Role Play Texts},
@@ -32263,6 +32273,33 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.19116/theory.2024.29.2.125},
   owner     = {Vincent},
   timestamp = {2024.07.05},
+}
+
+@Article{Kim2024c,
+  author    = {Kim, H.},
+  title     = {Shakespearean Character Network Dataset},
+  journal   = {Korean Journal of Digital Humanities},
+  year      = {2024},
+  volume    = {1},
+  pages     = {137-142},
+  owner     = {Vincent},
+  review    = {Data:
+https://github.com/hkim1596/shakespearean_character_network
+https://hkim1596.github.io/shakespearean_character_network},
+  timestamp = {2024.07.15},
+  url       = {kadh.org/wp-content/uploads/2024/07/6.-KJDH_vol1_김희진.pdf},
+}
+
+@Article{Kim2024d,
+  author    = {Kim, H.},
+  title     = {Shakespearean Character Network Analysis: Residual Dramatic Structures of Medieval Touring Companies and Neoclassical Unity},
+  journal   = {In/Outside: English Studies in Korea},
+  year      = {2024},
+  volume    = {56},
+  pages     = {18-56},
+  doi       = {10.46645/inoutsesk.56.1},
+  owner     = {Vincent},
+  timestamp = {2024.07.15},
 }
 
 @Book{Kimmerer2013,
@@ -60250,6 +60287,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1017/ccol0521792959.001},
   owner     = {Vincent},
   timestamp = {2020.07.25},
+}
+
+@Collection{Taylor2017,
+  author    = {Taylor, G. and Egan, G.},
+  title     = {The New Oxford Shakespeare: Authorship Companion},
+  year      = {2017},
+  doi       = {10.1093/actrade/9780199591169.001.0001},
+  owner     = {Vincent},
+  publisher = {Oxford University Press},
+  timestamp = {2024.07.15},
 }
 
 @Article{Taylor2017a,
