--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -2595,6 +2595,19 @@
   url       = {https://www.cs.york.ac.uk/gidy/articles/AISB09review.pdf},
 }
 
+@Article{Aris2007,
+  author    = {Aris, A. and Shneiderman, B.},
+  title     = {Designing Semantic Substrates for Visual Network Exploration},
+  journal   = {Information Visualization},
+  year      = {2007},
+  volume    = {6},
+  number    = {4},
+  pages     = {281-300},
+  doi       = {10.1057/palgrave.ivs.9500162},
+  owner     = {Vincent},
+  timestamp = {2024.07.20},
+}
+
 @InCollection{Arkin1991,
   author    = {Arkin, A. M. and Antrobus, J. S.},
   title     = {The effects of external stimuli applied prior to and during sleep on sleep experience},
@@ -13532,6 +13545,19 @@
   url       = {https://pdfs.semanticscholar.org/c2a3/850becae2799b0e591e7ab1008b84897d6e9.pdf},
 }
 
+@Article{Crnovrsanin2021,
+  author    = {Crnovrsanin, Tarik and {Shilpika} and Chandrasegaran, S. and Ma, K.-L.},
+  title     = {Staged Animation Strategies for Online Dynamic Networks},
+  journal   = {IEEE Transactions on Visualization and Computer Graphics},
+  year      = {2021},
+  volume    = {27},
+  number    = {2},
+  pages     = {539-549},
+  doi       = {10.1109/tvcg.2020.3030385},
+  owner     = {Vincent},
+  timestamp = {2024.07.20},
+}
+
 @Book{Cron2012,
   title     = {Wired for story: The writer's guide to using brain science to hook readers from the very first sentence},
   publisher = {Ten Speed Press},
@@ -23770,6 +23796,17 @@
   doi       = {10.1002/(sici)1097-4571(2000)51:4<380::aid-asi7>3.0.co;2-5},
   owner     = {Vincent},
   timestamp = {2019.04.09},
+}
+
+@InProceedings{Greene2010,
+  author    = {Greene, D. and Doyle, D. and Cunningham, P.},
+  title     = {Tracking the Evolution of Communities in Dynamic Social Networks},
+  booktitle = {International Conference on Advances in Social Networks Analysis and Mining},
+  year      = {2010},
+  pages     = {176-183},
+  doi       = {10.1109/ASONAM.2010.17},
+  owner     = {Vincent},
+  timestamp = {2012.08.18},
 }
 
 @InProceedings{Greene2012,
@@ -62982,6 +63019,17 @@ https://hkim1596.github.io/shakespearean_character_network},
   timestamp = {2023.07.11},
 }
 
+@PhdThesis{Vishnubhotla2024,
+  author      = {Vishnubhotla , K.},
+  title       = {Computational measures of language variation in textual utterances},
+  year        = {2024},
+  type        = {PhD Thesis},
+  institution = {University of Toronto},
+  owner       = {Vincent},
+  timestamp   = {2024.07.18},
+  url         = {https://cs.toronto.edu/pub/gh/Vishnubhotla-PhD-thesis-2024.pdf},
+}
+
 @Article{Vishwanathan2010,
   author    = {Vishwanathan, S. V. N. and Schraudolph, N. N. and Kondor, R. and Borgwardt, K. M.},
   title     = {Graph Kernels},
@@ -64082,9 +64130,9 @@ https://hkim1596.github.io/shakespearean_character_network},
   author    = {Wasserman, S. and Faust, K.},
   volume    = {8},
   series    = {Structural Analysis in the Social Sciences},
+  doi       = {10.1017/CBO9780511815478},
   owner     = {Vincent},
   timestamp = {2010.12.18},
-  url       = {http://www.cambridge.org/zw/academic/subjects/sociology/sociology-general-interest/social-network-analysis-methods-and-applications},
 }
 
 @Book{Watson1983,
