--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -2176,6 +2176,16 @@
   timestamp = {2024.01.01},
 }
 
+@Collection{Andresen2024,
+  author    = {Andresen, M. and Reiter, N.},
+  title     = {Computational Drama Analysis: Reflecting on Methods and Interpretations},
+  year      = {2024},
+  doi       = {10.1515/9783111071824},
+  owner     = {Vincent},
+  publisher = {De Gruyter},
+  timestamp = {2024.07.27},
+}
+
 @Book{Andrew1984,
   title     = {Concepts in Film Theory},
   publisher = {Oxford University Press},
@@ -6701,6 +6711,27 @@
   url       = {http://www.dialog-21.ru/digests/dialog2014/materials/pdf/BodrovaAABocharovVV.pdf},
 }
 
+@InProceedings{Boerner2023,
+  author    = {Börner, I. and Fischer, F. and Giovannini, L. and Lu, C. and Milling, C. and Skorinkin, D. and Sluyter-Gäthje, H. and Trilcke, P.},
+  title     = {Onboard onto {DraCor}. Prototyping Workflows to Homogenize Drama Corpora for an Open Infrastructure},
+  booktitle = {DHd Open Humanities Open Culture},
+  year      = {2023},
+  owner     = {Vincent},
+  timestamp = {2024.07.27},
+  url       = {https://zenodo.org/records/7711513},
+}
+
+@InProceedings{Boerner2023a,
+  author    = {Börner, I. and Trilcke, P. and Milling, C. and Fischer, F. and and Sluyter-Gäthje, H.},
+  title     = {Dockerizing {DraCor} - A Container-Based Approach to Reproducibility in Computational Literary Studies},
+  booktitle = {Digital Humanities Conference},
+  year      = {2023},
+  pages     = {293-295},
+  owner     = {Vincent},
+  timestamp = {2024.07.27},
+  url       = {https://zenodo.org/records/8107836},
+}
+
 @MastersThesis{Bogucki2022,
   author    = {Bogucki, W.},
   title     = {Analysis of graphs of the interactions between the characters in movies and {TV} series},
@@ -8617,6 +8648,18 @@
   url       = {https://www.cambridge.org/fr/academic/subjects/languages-linguistics/sociolinguistics/politeness-some-universals-language-usage?format=PB&isbn=9780521313551},
 }
 
+@InCollection{Brown2001,
+  author    = {Brown, H. M. and Rosand, E. and Strohm, R. and Noiray, M. and Parker, R. and Whittall, A. and Savage, R. and Millington, B.},
+  title     = {Opera (i)},
+  booktitle = {Grove Music Online},
+  publisher = {Oxford University Press},
+  year      = {2001},
+  doi       = {10.1093/gmo/9781561592630.article.40726},
+  journal   = {Oxford Music Online},
+  owner     = {Vincent},
+  timestamp = {2024.07.27},
+}
+
 @InCollection{Brown2004,
   author    = {Brown, J. A.},
   title     = {Gender, Sexuality, and Toughness: The Bad Girls of Action Film and Comic Books},
@@ -9124,6 +9167,19 @@
   doi       = {10.1023/a:1009715923555},
   owner     = {Vincent},
   timestamp = {2019.04.09},
+}
+
+@Article{Burges2009,
+  author    = {Burges, C. J. C.},
+  title     = {Dimension Reduction: A Guided Tour},
+  journal   = {Foundations and Trends in Machine Learning},
+  year      = {2009},
+  volume    = {2},
+  number    = {4},
+  pages     = {275–364},
+  doi       = {10.1561/2200000002},
+  owner     = {Vincent},
+  timestamp = {2024.07.27},
 }
 
 @Book{Burnard2014,
@@ -9796,6 +9852,18 @@
   doi       = {10.1016/j.dss.2012.05.031},
   owner     = {Vincent},
   timestamp = {2017.12.18},
+}
+
+@InCollection{Campana2012,
+  author    = {Campana, A.},
+  title     = {Genre and Poetics},
+  booktitle = {The Cambridge Companion to Opera Studies},
+  publisher = {Cambridge University Press},
+  year      = {2012},
+  pages     = {202-224},
+  doi       = {10.1017/CCO9781139024976.013},
+  owner     = {Vincent},
+  timestamp = {2024.07.27},
 }
 
 @Book{Campbell1949,
@@ -12460,6 +12528,19 @@
   timestamp = {2024.06.01},
 }
 
+@Article{Cleveland1979,
+  author    = {Cleveland, W. S.},
+  title     = {Robust Locally Weighted Regression and Smoothing Scatterplots},
+  journal   = {Journal of the American Statistical Association},
+  year      = {1979},
+  volume    = {74},
+  number    = {368},
+  pages     = {829–836},
+  doi       = {10.1080/01621459.1979.10481038},
+  owner     = {Vincent},
+  timestamp = {2024.07.27},
+}
+
 @Article{Clifford1994,
   author    = {Clifford, J.},
   title     = {Diasporas},
@@ -13668,6 +13749,17 @@
   doi       = {10.1016/s0065-2601(07)00002-0},
   owner     = {Vincent},
   timestamp = {2023.08.11},
+}
+
+@InCollection{Cuellar2023,
+  author    = {Cuéllar, Á.},
+  title     = {Stylometry and Spanish Golden Age Theatre: An Evaluation of Authorship Attribution in a Control Group of Undisputed Plays},
+  booktitle = {Digital Stylistics in Romance Studies and Beyond},
+  publisher = {Heidelberg University Press},
+  year      = {2023},
+  owner     = {Vincent},
+  timestamp = {2024.07.27},
+  url       = {https://www.academia.edu/53262871/Stylometry_and_Spanish_Golden_Age_Theatre_An_Evaluation_of_Authorship_Attribution_in_a_Control_Group_of_One_Hundred_Undisputed_Plays},
 }
 
 @InProceedings{Cuesta-Lazaro2022,
@@ -18474,6 +18566,19 @@
   timestamp = {2019.03.30},
 }
 
+@Article{Estill2018,
+  author    = {Estill, L. and Meneses, L.},
+  title     = {Is Falstaff Falstaff? Is Prince Hal Henry V?: Topic Modeling Shakespeare's Plays},
+  journal   = {Digital Studies / Le champ numérique},
+  year      = {2018},
+  volume    = {8},
+  number    = {1},
+  pages     = {1},
+  doi       = {10.16995/dscn.295},
+  owner     = {Vincent},
+  timestamp = {2024.07.27},
+}
+
 @Article{Estrada2006,
   author    = {Estrada, E.},
   title     = {Network robustness to targeted attacks. The interplay of expansibility and degree distribution},
@@ -19740,19 +19845,6 @@
   owner     = {Vincent},
   timestamp = {2019.06.24},
   url       = {https://dh2017.adho.org/abstracts/071/071.pdf},
-}
-
-@Article{Fischer2017b,
-  author    = {Fischer, F. and Dazord, G. and Göbel, M. and Kittel, C. and Trilcke, P.},
-  title     = {Le drame comme réseau de relations. Une application de l'analyse automatisée pour l'histoire littéraire du théâtre},
-  journal   = {Revue d'Historiographie du Théâtre},
-  year      = {2017},
-  volume    = {4},
-  number    = {4},
-  pages     = {5},
-  owner     = {Vincent},
-  timestamp = {2023.12.15},
-  url       = {https://sht.asso.fr/le-drame-comme-reseau-de-relations-une-application-de-lanalyse-automatisee-pour-lhistoire-litteraire-du-theatre/},
 }
 
 @Electronic{Fischer2018,
@@ -22142,6 +22234,16 @@
   url       = {http://gaia.fdi.ucm.es/sites/seed13/assets/actas_seed.pdf#page=35},
 }
 
+@InProceedings{Gervas2022,
+  author    = {Gervás, P. and Torrente, Á.},
+  title     = {Emotional Interpretation of Opera Seria: Impact of Specifics of Drama Structure},
+  booktitle = {14th International Joint Conference on Knowledge Discovery, Knowledge Engineering and Knowledge Management},
+  year      = {2022},
+  owner     = {Vincent},
+  timestamp = {2024.07.28},
+  url       = {http://nil.fdi.ucm.es/sites/default/files/KDIR2022-opera-CRC.pdf},
+}
+
 @InProceedings{Gervas2024,
   author    = {Gervás, P. and Méndez, G.},
   title     = {Pruning Worlds into Stories: Affective Interactions as Fitness Function},
@@ -22580,6 +22682,19 @@
   owner       = {Vincent},
   timestamp   = {2021.11.25},
   url         = {https://citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.105.8473&rep=rep1&type=pdf},
+}
+
+@Article{Giovannini2024,
+  author    = {Giovannini, L. and Skorinkin, D.},
+  title     = {Computational Approaches to Opera Libretti},
+  journal   = {Journal of Computational Literary Studies},
+  year      = {2024},
+  volume    = {3},
+  number    = {1},
+  pages     = {1-23},
+  doi       = {10.48694/JCLS.3595},
+  owner     = {Vincent},
+  timestamp = {2024.07.25},
 }
 
 @Book{Girard1961,
@@ -23289,6 +23404,19 @@
   doi       = {10.18653/v1/n18-1160},
   owner     = {Vincent},
   timestamp = {2020.01.05},
+}
+
+@Article{Gorlee1997,
+  author    = {Gorlée, D. L.},
+  title     = {Intercode Translation: Words and Music in Opera},
+  journal   = {Target},
+  year      = {1997},
+  volume    = {9},
+  number    = {2},
+  pages     = {234-269},
+  doi       = {10.1075/target.9.2.03gor},
+  owner     = {Vincent},
+  timestamp = {2024.07.28},
 }
 
 @InProceedings{Gorovits2018,
@@ -29665,6 +29793,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2010.12.21},
 }
 
+@Article{Jeong2022,
+  author    = {Jeong, H. and Yoo, J. H.},
+  title     = {Opera Clustering: K-means on librettos datasets},
+  journal   = {Journal of Internet Computing and Services},
+  year      = {2022},
+  volume    = {23},
+  number    = {2},
+  pages     = {45-52},
+  doi       = {10.7472/jksii.2022.23.2.45},
+  owner     = {Vincent},
+  timestamp = {2024.07.28},
+}
+
 @Book{Jewkes1958,
   title     = {Act Division in Elizabethan and Jacobean Plays, 1583-1616},
   publisher = {Shoe String Press},
@@ -29877,6 +30018,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1109/access.2019.2942433},
   owner     = {Vincent},
   timestamp = {2021.06.24},
+}
+
+@Article{Jin2022,
+  author    = {Jin, C. and Song, Z. and Xu, J. and Gao, H.},
+  title     = {Attention-Based Bi-DLSTM for Sentiment Analysis of Beijing Opera Lyrics},
+  journal   = {Wireless Communications and Mobile Computing},
+  year      = {2022},
+  volume    = {2022},
+  pages     = {1–8},
+  doi       = {10.1155/2022/1167462},
+  owner     = {Vincent},
+  timestamp = {2024.07.28},
 }
 
 @InProceedings{Jing2007,
@@ -36150,6 +36303,18 @@ https://hkim1596.github.io/shakespearean_character_network},
   timestamp = {2024.06.02},
 }
 
+@Article{Lehmann2022,
+  author    = {Lehmann, J. and Pado, S.},
+  title     = {Classification of Tragedies and Comedies in Calderón de la Barca's Comedias Nuevas},
+  journal   = {Zeitschrift für Digitale Geisteswissenschaft},
+  year      = {2022},
+  volume    = {7},
+  pages     = {12},
+  doi       = {10.17175/2022_012},
+  owner     = {Vincent},
+  timestamp = {2024.07.28},
+}
+
 @InProceedings{Lehnert1980,
   author    = {Lehnert, W. G.},
   title     = {Narrative Text Summarization},
@@ -38587,6 +38752,18 @@ https://hkim1596.github.io/shakespearean_character_network},
   timestamp = {2024.06.25},
 }
 
+@InCollection{Louvat-Molozay2018,
+  author    = {Louvat-Molozay, B.},
+  title     = {Le théâtre au miroir des langues: France, Italie, Espagne XVIe–XVIIe siècles},
+  booktitle = {Théâtre et musique},
+  publisher = {Honoré Champion},
+  year      = {2018},
+  series    = {Lumière Classique},
+  owner     = {Vincent},
+  timestamp = {2024.07.28},
+  url       = {https://www.honorechampion.com/fr/6049-book-08530653-9782745306531.html},
+}
+
 @Article{LOUWERSE2006,
   author    = {Louwerse, M. and Cai, Z. and Hu, X. and Ventura, M. and Jeuniaux, P.},
   title     = {Cognitively inspired natural-language based knowledge representations: Further explorations of latent semantic analysis},
@@ -39368,6 +39545,18 @@ https://hkim1596.github.io/shakespearean_character_network},
   url       = {http://proceedings.mlr.press/v5/maaten09a.html},
 }
 
+@TechReport{Maaten2009a,
+  author      = {van der Maaten, L. and Postma, E. O. and van den Herik, J.},
+  title       = {Dimensionality Reduction: A Comparative Review},
+  institution = {Tilburg University},
+  year        = {2009},
+  type        = {Technical Report},
+  number      = {TR2009–005},
+  owner       = {Vincent},
+  timestamp   = {2024.07.28},
+  url         = {https://lvdmaaten.github.io/publications/papers/TR_Dimensionality_Reduction_Review_2009.pdf},
+}
+
 @Article{MacCarron2012,
   author    = {Mac Carron, P. and Kenna, R.},
   title     = {Universal Properties of Mythological Networks},
@@ -40083,6 +40272,16 @@ https://hkim1596.github.io/shakespearean_character_network},
   owner     = {Vincent},
   timestamp = {2024.01.01},
   url       = {https://mitpress.mit.edu/9780262296915/the-language-of-new-media/},
+}
+
+@Book{Manovich2020,
+  title     = {Cultural Analytics},
+  publisher = {MIT Press},
+  year      = {2020},
+  author    = {Manovich, L.},
+  owner     = {Vincent},
+  timestamp = {2024.07.28},
+  url       = {https://mitpress.mit.edu/9780262037105/cultural-analytics/},
 }
 
 @Book{Mantegna2000,
@@ -44362,6 +44561,17 @@ https://hkim1596.github.io/shakespearean_character_network},
   url       = {https://www.jstor.org/stable/2098689},
 }
 
+@InProceedings{Munoz-Lago2020,
+  author    = {Munoz-Lago, P. and Usula, N. and Parada-Cabaleiro, E. and Torrente, A.},
+  title     = {Visualising the Structure of 18th Century Operas: A Multidisciplinary Data Science Approach},
+  booktitle = {24th International Conference Information Visualisation},
+  year      = {2020},
+  pages     = {530-536},
+  doi       = {10.1109/iv51561.2020.00091},
+  owner     = {Vincent},
+  timestamp = {2024.07.28},
+}
+
 @Electronic{Munroe2009,
   author       = {Munroe, R.},
   month        = {11},
@@ -46143,6 +46353,16 @@ https://hkim1596.github.io/shakespearean_character_network},
   doi       = {10.1016/j.neunet.2005.08.010},
   owner     = {Vincent},
   timestamp = {2022.06.22},
+}
+
+@Book{Norman2009,
+  title     = {Quinault, librettiste de {L}ully: le poète des grâces},
+  publisher = {Mardaga},
+  year      = {2009},
+  author    = {Norman, B.},
+  owner     = {Vincent},
+  timestamp = {2024.07.28},
+  url       = {https://www.editionsmardaga.com/products/quinault-librettiste-de-lully?variant=40044964053160},
 }
 
 @Article{Norrick2005,
@@ -52392,7 +52612,7 @@ https://hkim1596.github.io/shakespearean_character_network},
 @InCollection{Rodda2024,
   author    = {Rodda, I. and Durga Bhavani, S.},
   title     = {Visualization of Textual Corpora Using Social Network Analysis},
-  booktitle = {Optimized Computational Intelligence Driven Decision‐Making: Theory, Application and Challenges},
+  booktitle = {Optimized Computational Intelligence Driven Decision-Making: Theory, Application and Challenges},
   publisher = {Scrivener},
   year      = {2024},
   chapter   = {8},
@@ -55662,6 +55882,18 @@ https://hkim1596.github.io/shakespearean_character_network},
   doi       = {10.1109/thms.2017.2695613},
   owner     = {Vincent},
   timestamp = {2020.03.15},
+}
+
+@InCollection{Senici2015,
+  author    = {Senici, E.},
+  title     = {Genre},
+  booktitle = {The Oxford Handbook of Opera},
+  publisher = {Oxford University Press},
+  year      = {2015},
+  pages     = {33-52},
+  doi       = {10.1093/oxfordhb/9780195335538.013.002},
+  owner     = {Vincent},
+  timestamp = {2024.07.28},
 }
 
 @InProceedings{Sennrich2009,
@@ -61571,6 +61803,16 @@ https://hkim1596.github.io/shakespearean_character_network},
   url       = {http://dh2016.adho.org/abstracts/360},
 }
 
+@InProceedings{Trilcke2020,
+  author    = {Trilcke, P. and Kittel, C. and Reiter, N. and Maximova, D. and Fischer, F.},
+  title     = {Opening the Stage – A Quantitative Look at Stage Directions in German Drama},
+  booktitle = {Digital Humanities Conference},
+  year      = {2020},
+  owner     = {Vincent},
+  timestamp = {2024.07.28},
+  url       = {https://dh2020.adho.org/wp-content/uploads/2020/07/337_OpeningtheStageAQuantitativeLookatStageDirectionsinGermanDrama.html},
+}
+
 @InCollection{Trilcke2024,
   author    = {Trilcke, P. and Ustinova, E. and Börner, I. and Fischer, F. and Milling, C.},
   title     = {Detecting Small Worlds in a Corpus of Thousands of Theater Plays},
@@ -63416,6 +63658,17 @@ https://hkim1596.github.io/shakespearean_character_network},
   url       = {http://persiababylonia.org/archives/methods/social-network-analysis-and-cuneiform-archives/},
 }
 
+@Book{Waggoner2021,
+  title     = {Modern Dimension Reduction},
+  publisher = {Cambridge University Press},
+  year      = {2021},
+  author    = {Waggoner, P. D.},
+  series    = {Elements in Quantitative and Computational Methods for the Social Sciences},
+  doi       = {10.1017/9781108981767},
+  owner     = {Vincent},
+  timestamp = {2024.07.28},
+}
+
 @Article{Wagner2012,
   author    = {Wagner, D. D. and Haxby, J. V. and Heatherton, T. F.},
   title     = {The representation of self and person knowledge in the medial prefrontal cortex},
@@ -64487,6 +64740,19 @@ https://hkim1596.github.io/shakespearean_character_network},
   url          = {https://gweissman.github.io/babelgraph/blog/2017/06/15/greys-anatomy-network-of-sexual-relations.html},
   owner        = {Vincent},
   timestamp    = {2018.11.11},
+}
+
+@Article{Weisstein1961,
+  author    = {Weisstein, U.},
+  title     = {The Libretto as Literature},
+  journal   = {Books Abroad},
+  year      = {1961},
+  volume    = {35},
+  number    = {1},
+  pages     = {16-22},
+  doi       = {10.2307/40115290},
+  owner     = {Vincent},
+  timestamp = {2024.07.28},
 }
 
 @Article{Weitin2015,
